--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ images/chapter3/.DS_Store
 images/.DS_Store
 images/working/smith-working.svg
 .DS_Store
+images/chapter2/split-complementary-2.svg
+images/chapter2/analagous-colors-4.svg
