--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ images/working/smith-working.svg
 .DS_Store
 images/chapter2/split-complementary-2.svg
 images/chapter2/analagous-colors-4.svg
+*.icloud
